--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
             "ES2022"
         ],
         "moduleResolution": "node",
-        "rootDir": "./src",
-        "outDir": "./dist",
-        "baseUrl": "./src",
+        "rootDir": "src",
+        "outDir": "dist",
+        "baseUrl": "src",
         "paths": {
             "@/*": [
                 "./*"
