--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
         ],
         "resolveJsonModule": true,
         "esModuleInterop": true,
-        "types": [
-            "node"
+        "typeRoots": [
+            "./node_modules/@types"
         ],
         "skipLibCheck": true,
         "strict": false
