--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
         ],
         "resolveJsonModule": true,
         "esModuleInterop": true,
-        "typeRoots": [
-            "./node_modules/@types"
+        "types": [
+            "node"
         ],
         "skipLibCheck": true,
         "strict": false
