--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^8.0.0",
     "sharp": "^0.33.5",
     "uuid": "^13.0.0",
     "winston": "^3.17.0",
@@ -52,6 +53,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.19.8",
+    "@types/nodemailer": "^7.0.9",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^9.18.0",
